# triton_cpp

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  README_8md.html  THIRD_PARTY_NOTICES.md  annotated.html  annotated_dup.js  classes.html  classtriton__cpp_1_1CudaSharedMemoryRegion-members.html  classtriton__cpp_1_1CudaSharedMemoryRegion.html  classtriton__cpp_1_1CudaSharedMemoryRegion.js  classtriton__cpp_1_1SharedMemoryRegion-members.html  classtriton__cpp_1_1SharedMemoryRegion.html  classtriton__cpp_1_1SharedMemoryRegion.js  classtriton__cpp_1_1TritonInterface-members.html  classtriton__cpp_1_1TritonInterface.html  classtriton__cpp_1_1TritonInterface.js  classtriton__cpp_1_1detail_1_1PosixSharedMemory-members.html  classtriton__cpp_1_1detail_1_1PosixSharedMemory.html  classtriton__cpp_1_1detail_1_1PosixSharedMemory.js  cuda__shm_8hpp.html  cuda__shm_8hpp.js  cuda__shm_8hpp_source.html  dir_64a7b4fa904afa105c1bfe7d84550ce7.html  dir_64a7b4fa904afa105c1bfe7d84550ce7.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  index.html  menudata.js  (+30 more)
.github/workflows/: ci.yml  docs.yml
cmake/: FindTriton.cmake  TritonConfig.cmake  triton_cppAliases.cmake  triton_cppConfig.cmake.in  triton_cppDependencies.cmake.in
include/triton_cpp/: cuda_shm.hpp  shm.hpp  shm_utils.hpp  triton_interface.hpp  types.hpp  utils.hpp
scripts/: check_license_headers.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+14 more)
tests/: input_data.cpp  shared_memory_region.cpp  types.cpp  verify_installed_package.cmake
tests/cmake_package/: CMakeLists.txt  main.cpp
