<?xml version="1.0"?>
<package format="3">

  <name>triton_cpp</name>
  <version>1.1.0</version>
  <description>Header-only wrapper around the NVIDIA Triton C++ API</description>

  <maintainer email="bastian.lampe@rwth-aachen.de">Bastian Lampe</maintainer>

  <license>MIT</license>

  <author email="bastian.lampe@rwth-aachen.de">Bastian Lampe</author>
  <author email="fabian.thomsen@rwth-aachen.de">Fabian Thomsen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>