<?xml version="1.0"?>
<package format="3">

  <name>triton_cpp</name>
  <version>1.2.1</version>
  <description>Header-only wrapper around the NVIDIA Triton C++ API</description>

  <maintainer email="bastian.lampe@rwth-aachen.de">Bastian Lampe</maintainer>

  <license>Apache-2.0</license>

  <url type="website">https://github.com/openads-project/triton_cpp</url>
  <url type="repository">https://github.com/openads-project/triton_cpp</url>
  <url type="bugtracker">https://github.com/openads-project/triton_cpp/issues</url>

  <author email="bastian.lampe@rwth-aachen.de">Bastian Lampe</author>
  <author email="fabian.thomsen@rwth-aachen.de">Fabian Thomsen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
